refactor: modernize & reformat